--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,11 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
     <script>window.jQuery || document.write('<script src="/static/tmp/js/jquery.min.js"><\/script>')</script>
+
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" th:href="@{/static/tmp/img/favicon.png}">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" th:href="@{/static/tmp/img/favicon.png}">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" th:href="@{/static/tmp/img/favicon.png}">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" th:href="@{/static/tmp/img/favicon.png}">
     <style>
         body {
             padding-top: 3.5rem;
@@ -36,12 +41,14 @@
         form > .form-group {
             margin-bottom: 0;
         }
-
     </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Bark</a>
+    <a class="navbar-brand" href="#">
+        <img th:src="@{/static/tmp/img/favicon.png}" width="30" height="30" class="d-inline-block align-top" alt=""
+             loading="lazy">
+        Bark</a>
 
 </nav>
 
@@ -54,8 +61,8 @@
                 <form>
                     <div class="form-group row">
                         <label th:for="${item['key']}"
-                               class="col-sm-2 col-form-label"><strong>备注</strong></label>
-                        <div class="col-sm-10 input-group">
+                               class="col-sm-3 col-form-label"><strong>备注</strong></label>
+                        <div class="col-sm-9 input-group">
                             <input type="text" class="form-control"
                                    th:id="${item['key']}"
                                    th:value="${item['remark']}"
@@ -66,25 +73,25 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-2 col-form-label"><strong>Key</strong></label>
-                        <div class="col-sm-10">
+                        <label class="col-sm-3 col-form-label"><strong>Key</strong></label>
+                        <div class="col-sm-9">
                             <label>
                                 <a th:href="'/message/list?key=' + ${item['key']}" th:text="${item['key']}"></a>
                             </label>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-2 col-form-label"><strong>DeviceToken</strong></label>
-                        <div class="col-sm-10">
+                        <label class="col-sm-3 col-form-label"><strong>DeviceToken</strong></label>
+                        <div class="col-sm-9">
                             <p th:text="${item['deviceToken']}"></p>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-2 col-form-label"><strong>注册时间</strong></label>
-                        <div class="col-sm-10">
+                        <label class="col-sm-3 col-form-label"><strong>注册时间</strong></label>
+                        <div class="col-sm-9">
                             <p>
                                 <span th:text="${#temporals.format(item['addTime'], 'yy/MM/dd HH:mm:ss')}"
-                                      class="badge badge-pill badge-primary"></span>
+                                      class="badge badge-pill badge-secondary"></span>
                             </p>
                         </div>
                     </div>
