--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <!--    <script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script>-->
+    <!--    <script>-->
+    <!--        let vConsole = new VConsole();-->
+    <!--        console.log('Hello world');-->
+    <!--    </script>-->
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1,user-scalable=0">
@@ -46,10 +51,9 @@
 <body>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="#">
-        <img th:src="@{/static/tmp/img/favicon.png}" width="30" height="30" class="d-inline-block align-top" alt=""
-             loading="lazy">
-        Bark</a>
-
+        <img th:src="@{/static/tmp/img/favicon.png}" width="30" height="30" class="d-inline-block align-top" alt="">
+        Bark
+    </a>
 </nav>
 
 <main role="main">
@@ -67,7 +71,7 @@
                                    th:id="${item['key']}"
                                    th:value="${item['remark']}"
                                    placeholder="备注"/>
-                            <button class="btn btn-success"
+                            <button class="btn btn-primary" type="button"
                                     th:onclick="updateRemark([[${item['key']}]]);">修改
                             </button>
                         </div>
@@ -117,7 +121,6 @@
     function updateRemark(key) {
         let inputId = "#" + key;
         let remark = $(inputId).val();
-        console.log(key + "," + remark);
         let url = "/message/device/updateRemark";
         let data = {
             key: key,
@@ -129,6 +132,8 @@
             } else {
                 alert("修改失败：" + result.message)
             }
+        }).fail(function (err) {
+            alert(err);
         });
     }
 
