--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,12 +16,12 @@
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/static/tmp/js/jquery.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="/js/jquery.min.js"><\/script>')</script>
 
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" th:href="@{/static/tmp/img/favicon.png}">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" th:href="@{/static/tmp/img/favicon.png}">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" th:href="@{/static/tmp/img/favicon.png}">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" th:href="@{/static/tmp/img/favicon.png}">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" th:href="@{/img/favicon.png}">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" th:href="@{/img/favicon.png}">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" th:href="@{/img/favicon.png}">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" th:href="@{/img/favicon.png}">
     <style>
         body {
             padding-top: 3.5rem;
@@ -51,7 +51,7 @@
 <body>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="#">
-        <img th:src="@{/static/tmp/img/favicon.png}" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img th:src="@{/img/favicon.png}" width="30" height="30" class="d-inline-block align-top" alt="">
         Bark
     </a>
 </nav>
