--- a/src/main/resources/templates/msgList.html
+++ b/src/main/resources/templates/msgList.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/static/tmp/js/jquery.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="/js/jquery.min.js"><\/script>')</script>
     <style>
         body {
             padding-top: 3.5rem;
